--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -17,6 +17,7 @@ zuul:
   routes:
     item-service: /item/**  # 商品微服务的映射路径
     user-service: /user/**  # 用户微服务
+    search-service: /search/** # 搜索微服务
     auth-service: /auth/**  # 授权中心微服务
     cart-service: /cart/**  # 授权中心微服务
     order-service: /order/** # 订单微服务
